webkit fails IETC column-width-negative-001.htm https://bugs.webkit.org/show_bug.cgi?id=84778

Patch by Uday Kiran <udaykiran@motorola.com> on 2013-01-03
Reviewed by Tony Chang.

Source/WebCore:

CSS3 multicolumn 'column-width' property value must be greater than zero.
http://dev.w3.org/csswg/css3-multicol/#column-width

Test: fast/multicol/column-width-zero.html
Negative value test covered by ietestcenter/css3/multicolumn/column-width-negative-001.htm

* css/CSSParser.cpp:
(WebCore::CSSParser::parseValue): Check for value greater than zero while parsing.

LayoutTests:

New test for multicolumn 'column-width' property with zero value.
Enable IETC column-width-negative test.

* fast/multicol/column-width-zero-expected.txt: Added.
* fast/multicol/column-width-zero.html: Added.
* platform/chromium/TestExpectations:
* platform/efl/TestExpectations:
* platform/gtk/TestExpectations:
* platform/mac/TestExpectations:
* platform/qt/TestExpectations:

Canonical link: https://commits.webkit.org/124222@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@138746 268f45cc-cd09-0410-ab3c-d52691b4dbfc